# streaming-commons

./: .gitignore  .travis.yml  ChangeLog.md  README.md  appveyor.yml  stack-lts-6.yaml  stack.yaml  streaming-commons.cabal
.azure/: azure-linux-template.yml  azure-osx-template.yml  azure-windows-template.yml
.github/workflows/: tests.yml
Data/Streaming/: Blaze.hs  Filesystem.hs  Network.hs  Process.hs  Text.hs  Zlib.hs
Data/Streaming/ByteString/: Builder.hs
Data/Streaming/ByteString/Builder/: Buffer.hs  Class.hs
Data/Streaming/Filesystem/: OsPath.hs
Data/Streaming/Network/: Internal.hs
Data/Streaming/Process/: Internal.hs
Data/Streaming/Zlib/: Lowlevel.hs
Data/Text/Internal/Encoding/: Utf16.hs  Utf8.hs
Data/Text/Internal/Unsafe/: Char.hs  Shift.hs
bench/: builder-to-bytestring-io.hs  count-chars.hs  decode-memory-usage.hs
cbits/: text-helper.c  zlib-helper.c
test/Data/Streaming/: BlazeSpec.hs  FileReadSpec.hs  FilesystemSpec.hs  NetworkSpec.hs  ProcessSpec.hs  TextSpec.hs  ZlibSpec.hs
test/Data/Streaming/ByteString/: BuilderSpec.hs
test/Data/Streaming/Filesystem/: OsPathSpec.hs
